# castep-model-core

./: .gitignore  Cargo.toml  README.md
doc/file_formats/: cerius_2_msi.md
src/: error.rs  lib.rs  test.rs
src/atom/: atom_builder.rs  mod.rs  visitor.rs
src/bond/: mod.rs
src/builder_typestate/: mod.rs
src/lattice/: mod.rs
src/model_type/: cell.rs  mod.rs  msi.rs
src/param_writer/: castep_param.rs  mod.rs  ms_aux_files.rs  seed_writer.rs
src/parser/: mod.rs  msi_parser.rs
src/parser/msi_parser/: mod.rs  state_machine.rs
src/parser/msi_parser/state_machine/: atom_parser.rs  error.rs  mod.rs  model_attributes_parser.rs
