[package]
name = "castep-model-core"
description = "The core module defining the flow and structs of data in computational chemistry routines."
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-model-core"
repository = "https://github.com/TonyWu20/castep-model-core"
version = "0.2.2"
edition = "2021"
license = "MIT"
keywords = [
    "chemistry",
    "CASTEP",
    "computational_chem",
    "linear_algebra",
    "model_generator",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "chemrust-core",
    "chemrust-parser",
    "chemrust-formats"
]
